--- a/index.html
+++ b/index.html
@@ -155,28 +155,38 @@
     /* ====== МОНСТРЫ ====== */
     .monsters-shadow, .monsters {
       position: fixed;
-      bottom: -15%;
+      bottom: 0;
       left: 0;
       width: 100%;
-      height: 60vh;
       display: flex;
       justify-content: space-between;
       align-items: flex-end;
       pointer-events: none;
+      padding: 0 5vw;
     }
     .monsters-shadow {
-      bottom: -12%;
-      height: 65vh;
       opacity: 0.4;
       filter: grayscale(1) brightness(0.3) blur(2px);
     }
-    .monsters-shadow .shadow { height: 100%; }
-    .monsters-shadow img { height: 100%; opacity: 0.7; }
+    .monsters .monster,
+    .monsters-shadow .shadow {
+      flex: 1;
+      display: flex;
+      justify-content: center;
+      align-items: flex-end;
+    }
+    .monsters img,
+    .monsters-shadow img {
+      max-height: 35vh;
+      width: auto;
+    }
+    .monsters .center img,
+    .monsters-shadow .center img {
+      max-height: 45vh;
+    }
     .monsters-shadow .center img { animation: shadowFloat 10s ease-in-out infinite; }
     @keyframes shadowFloat { 0%, 100% { transform: translateY(5%); } 50% { transform: translateY(-5%); } }
-    .monsters .monster { position: relative; height: 100%; }
-    .monsters img { height: 100%; transform-origin: bottom center; animation: monsterPeek 5s ease-in-out infinite; }
-    .monsters .center { position: absolute; left: 50%; transform: translateX(-50%); height: 100%; }
+    .monsters img { transform-origin: bottom center; animation: monsterPeek 5s ease-in-out infinite; }
     .monsters .center img { animation: monsterPeekCenter 5s ease-in-out infinite; }
     @keyframes monsterPeek { 0%, 100% { transform: translateY(15%) rotate(0deg); } 50% { transform: translateY(0) rotate(3deg); } }
     @keyframes monsterPeekCenter { 0%, 100% { transform: translateY(20%) scale(1); } 50% { transform: translateY(0) scale(1.05); } }
